# hwinfo-rs

./: Cargo.toml
src/: linux.rs  main.rs
