[package]
name = "hwinfo"
version = "0.0.1"
authors = ["Zac Brown <zacbrown@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "NOTE: INCOMPLETE. Friendlier interface to grabbing SMBIOS data from Windows, macOS, and Linux."

[dependencies]
CoreFoundation-sys = "0.1"
dmidecode = "0.3"
IOKit-sys = "0.1"
mach = "0.2"
scopeguard = "1.0"
